--- a/css/main.css
+++ b/css/main.css
@@ -146,22 +146,11 @@
 
 .mainQuick {
     position: absolute;
-    bottom: -120px;
-    left: 270px;
+    bottom: -40px;
+    left: 250px;
     width: 1400px;
     margin: 0 auto;
     padding: 0 0 50px 0;
-}
-
-.mainQuick .tit {
-    font-size: 30px;
-    margin: 30px 0 20px 0;
-}
-
-.mainQuick .tit ul {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
 }
 
 .quick_list ul {
@@ -173,7 +162,7 @@
 .quick_list ul li {
     position: relative;
     flex: 1 1 33.333333333%;
-    padding: 20px 10px;
+    padding: 20px 30px;
     background: #fff;
     border: 1px solid #888;
     border-radius: 10px;
@@ -191,7 +180,7 @@
 
 .quick_list ul li a .last {
     position: absolute;
-    right: 20px;
+    right: 15px;
     color: #f9661e;
 }
 
@@ -212,4 +201,95 @@
 
 .quick_list ul li .txt p {
     font-size: 15px;
+}
+
+/* .tit {
+    font-size: 18px;
+    padding: 10px;
+    margin: 50px 0 20px 0;
+    line-height: 30px;
+}
+
+.tit ul {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+} */
+
+.mainEvent .inner {
+    width: 1400px;
+    margin: 0 auto;
+    padding: 100px 0 50px 0;
+
+    display: flex;
+    gap: 20px;
+}
+
+.mainEvent .inner .itm {
+    position: relative;
+    cursor: pointer;
+    box-shadow: 5px 5px 10px rgb(0 0 0 / 15%);
+}
+
+.mainEvent .inner .itm .txt {
+    padding: 0 0 0 10px;
+}
+
+.mainEvent .inner .itm .label {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    font-size: 14px;
+    font-weight: 300;
+    background: #1c1f6b;
+    color: #fff;
+    padding: 10px;
+}
+
+.mainEvent .inner .itm img {
+    width: 100%;
+    height: 270px;
+}
+
+.mainEvent .inner .itm strong {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 60px;
+}
+
+.mainEvent .inner .itm p {
+    margin: 5px 0 70px 0;
+    font-size: 15px;
+    line-height: 20px;
+}
+
+.mainEvent .inner .itm a {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 15px;
+
+    background: #f9661e;
+    color: #fff;
+    text-align: center;
+}
+
+
+.mainInfo .inner {
+    width: 1400px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.mainInfo .inner h2 {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 0 30px 0;
+}
+
+.mainInfo .inner h2 span {
+    color: #282b91;
 }
