--- a/css/main.css
+++ b/css/main.css
@@ -206,18 +206,38 @@
     font-size: 15px;
 }
 
-/* .tit {
-    font-size: 18px;
+.dec {
+    font-size: 20px;
+    font-weight: 700;
     padding: 10px;
-    margin: 50px 0 20px 0;
     line-height: 30px;
 }
 
-.tit ul {
+.dec ul {
     display: flex;
-    gap: 20px;
+    gap: 30px;
     justify-content: center;
-} */
+}
+
+.dec .tit {
+    margin: 0 0 20px 0;
+}
+
+.dec .tit>li {
+    position: relative;
+}
+
+.dec .tit>li::before {
+    content: "";
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    z-index: -1;
+    background: rgba(249, 102, 3, 0.8);
+}
+
 
 .mainEvent .inner {
     width: 1400px;
@@ -359,10 +379,9 @@
 }
 
 .mainInfo .info_gide img {
-    width: 400px;
+    width: 460px;
     height: 500px;
 }
-
 
 .mainInfo .info_gide .case {
     position: relative;
@@ -439,14 +458,14 @@
 
 .mainReview {
     position: relative;
-    width: 1270px;
+    width: 1400px;
     margin: 0 auto;
     padding: 50px 0;
 }
 
 .mainReview .inner {
     display: flex;
-    gap: 100px;
+    gap: 200px;
 }
 
 .mainReview .inner .left h3 {
@@ -462,6 +481,7 @@
 
 .mainReview .review_slide {
     width: 900px;
+    margin: 20px 0 0 0;
 }
 
 .mainReview .review_slide .itm {
@@ -475,19 +495,25 @@
 
 .mainReview .review_slide .itm span {
     display: block;
-    font-size: 13px;
+    font-size: 12px;
+    font-weight: 300;
     color: #666;
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
 }
 
 .mainReview .review_slide .itm p {
-    font-size: 14px;
+    line-height: 15px;
+    font-size: 13px;
+    overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
 
 .mainReview .review_arrow {
     position: absolute;
-    top: 30%;
+    top: 45%;
     right: 35%;
 
     font-size: 30px;
@@ -496,17 +522,49 @@
 
 .mainReview .review_arrow i:first-child {
     position: absolute;
-    left: -530px;
+    left: -560px;
 }
 
 
 .mainReview .review_arrow i:last-child {
     position: absolute;
-    left: 410px;
+    right: -500px;
 }
 
 .footer {
     background: #1c1f6b;
     color: #999;
     padding: 50px 0;
+}
+
+.footer .inner {
+    width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .inner ul {
+    display: flex;
+}
+
+.footer .inner .left span {
+    display: block;
+    font-size: 13px;
+    margin: 0 0 20px 0;
+}
+
+.footer .inner .left ul li {
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.footer .inner .left ul li~li::before {
+    content: "";
+    display: inline-block;
+    width: 1px;
+    height: 12px;
+    background: #888;
+    margin: 0 10px;
+    vertical-align: middle
 }
