--- a/css/main.css
+++ b/css/main.css
@@ -209,8 +209,7 @@
 .dec {
     font-size: 20px;
     font-weight: 700;
-    padding: 0 0 50px 0;
-    ;
+    padding: 50px 0;
     line-height: 30px;
 }
 
